# omgopasscc

./: CMakeLists.txt  LICENSE  README.md
inc/omgopasscc/: omgopasscc.h
sample/: sample.cpp
